--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
     <div class="ful-menu">
         <ul>
-            <li><a href="#"><i id="a" class="fa-solid fa-house"> Home</i></a></li>
-            <li><a href="#"><i id="b" class="fa-solid fa-address-card">About us</i></a></li>
-            <li><a href="#"><i id="c" class="fa-solid fa-info"> Services</i></a>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-solid fa-house"><h4>Home</h4></i></a></li>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-solid fa-address-card"><h4>About us</h4></i></a></li>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-solid fa-info"><h4>Services</h4></i></a>
                 <div class="menu1">
                     <ul>
                         <li><a href="#">Web design</a></li>
@@ -31,10 +31,10 @@
                     </ul>
                 </div>
             </li>
-            <li><a href="#"><i id="d" class="fa-solid fa-person">Clients</i></a></li>
-            <li><a href="#"><i id="e" class="fa-solid fa-building-columns">Investers</i></a></li>
-            <li><a href="#"><i id="f" class="fa-brands fa-slideshare">Pricing</i></a></li>
-            <li><a href="#"><i id="h" class="fa-brands fa-slideshare">Training</i></a></li>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-solid fa-person"><h4>Clients</h4></i></a></li>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-solid fa-address-card"><h4>Investers</h4></i></a></li>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-brands fa-slideshare"><h4>Pricing</h4></i></a></li>
+            <li><a href="#"><i style="font-size: larger;" id="a" class="fa-brands fa-slideshare"><h4>Training</h4></i></a></li>
 
         </ul>
 
